--- a/src/routes/task-routes/tasks.css
+++ b/src/routes/task-routes/tasks.css
@@ -1,17 +1,28 @@
 .project-tasks {
   max-width: 100%;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 0.5rem 1.5rem;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+
+  /* display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: flex-start; */
+  gap: 1em 0;
 }
 
 .task-card {
+  /* display: inline; */
   border: 1px solid #fff;
   border-radius: 10px;
-  max-width: 300px;
+  width: 300px;
   height: fit-content;
   padding: 0.5rem 1rem;
-  background-color: #deb8871a;
+  /* margin-bottom: 1rem; */
+  background-color: #b6b6b61a;
+}
+
+.task-card:hover {
+  box-shadow: 0 0.1em 0.2em #fff;
 }
 
 .task-actions {
@@ -34,11 +45,30 @@ form:has(.new-task-btn) {
   background-color: transparent;
   display: grid;
   place-items: center;
+  transition: scale 100ms;
+}
+
+.new-task-btn:hover,
+.new-task-btn:focus,
+.edit-task-btn:hover,
+.edit-task-btn:focus,
+.delete-task-btn:hover,
+.delete-task-btn:focus,
+.new-todo-btn:hover,
+.new-todo-btn:focus {
+  scale: 1.4;
+}
+
+.new-task-btn:active,
+.edit-task-btn:active,
+.delete-task-btn:active,
+.new-todo-btn:active {
+  scale: 1;
 }
 
 .new-task,
 .edit-task {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
@@ -102,6 +132,11 @@ form:has(.new-task-btn) {
   border: 1px solid white;
   padding: 0.5rem;
   border-radius: 5px;
+  transition: box-shadow 200ms;
+}
+
+.todos > li:hover {
+  box-shadow: 0 0 0.25em #fff;
 }
 
 .display-todos {
